objects/Request__c.object
<CustomObject>
    <description>used for internal requests for things like Deal Desk, Sales Ops, etc</description>
    <fields>
        <fullName>ACV__c</fullName>
        <formula>Opportunity__r.ACV__c</formula>
        <label>ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>used to connect Request to the corresponding account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Close_Date_Time__c</fullName>
        <description>If a Request record is closed and its previous value was not Closed, set this as a timestamp field with the Current Date/Time</description>
        <label>Close Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <formula>Opportunity__r.Contract.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Desk_Type__c</fullName>
        <description>type of Deal Desk Request</description>
        <label>Deal Desk Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Quote</fullName>
                </value>
                <value>
                    <fullName>Expansion Quote</fullName>
                </value>
                <value>
                    <fullName>Support Quote</fullName>
                </value>
                <value>
                    <fullName>Percentage-Based Feature Add On Quote</fullName>
                </value>
                <value>
                    <fullName>License Swap Quote</fullName>
                </value>
                <value>
                    <fullName>Manual Order Form</fullName>
                </value>
                <value>
                    <fullName>Pricing Support</fullName>
                </value>
                <value>
                    <fullName>Memo Language</fullName>
                </value>
                <value>
                    <fullName>Opportunity Cleanup</fullName>
                </value>
                <value>
                    <fullName>Signature Assistance</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>used for original chatter in deal desk request</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>In_Progress_Date_Time__c</fullName>
        <description>If a Request is set to In Progress, then timestamp this field with the Current Date/Time</description>
        <label>In Progress Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Manager__c</fullName>
        <formula>Opportunity__r.Owner.Manager.FirstName +&apos; &apos;+Opportunity__r.Owner.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>used to connect the Request to the corresponding Opportunity, if applicable</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pending_Date_Time__c</fullName>
        <label>Pending Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If Request is originating from a Quote, this field should be automatically populated.</description>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If a request record is created, capture the Requestor user here</description>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Pending - Legal</fullName>
                </value>
                <value>
                    <fullName>Pending - Finance</fullName>
                </value>
                <value>
                    <fullName>Pending - Sales</fullName>
                </value>
                <value>
                    <fullName>Closed Not Processed</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>TEXT(Opportunity__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Deal Desk Requests</label>
    <listViews>
        <fullName>Deal_Desk_Request</fullName>
        <columns>NAME</columns>
        <columns>Requestor__c</columns>
        <columns>Deal_Desk_Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notContain</operation>
            <value>Closed Not Processed,Closed</value>
        </filters>
        <label>Deal Desk</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deal Desk Requests</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>